<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="string_app_name">ScanOID</string>
    <string name="action_settings">Settings</string>
    <string name="app_id">1629846103896637</string>
    <string name="string_email">Adresse e-mail</string>
    <string name="string_motDePasse">Mot de passe</string>
    <string name="string_new_motDePasse">Nouveau mot de passe</string>
    <string name="string_confirmationMotDePasse">Confirmation</string>
    <string name="string_new_confirmationMotDePasse">Confirmation</string>
    <string name="string_creer_compte">Créer un compte</string>
    <string name="string_nomProduit">Nom du produit</string>
    <string name="string_nomFabricant">Nom du fabricant</string>
    <string name="string_ajout_produit">Ajouter le produit</string>
    <string name="string_description2">Description (Facultatif)</string>
    <string name="string_adresse">Adresse</string>
    <string name="string_adresse_cp">Code postal</string>
    <string name="string_adresse_ville">Ville</string>
    <string name="string_prenom">Prénom</string>
    <string name="string_nom">Nom</string>
    <string name="string_dateDeNaissance">Date de naissance (AAAA-MM-JJ)</string>
    <string name="string_email_profil">E-mail : </string>
    <string name="string_mdp_profil">Mot de passe : </string>
    <string name="string_rue_profil">Rue : </string>
    <string name="string_cp_profil">Code postal : </string>
    <string name="string_ville_profil">Ville : </string>
    <string name="string_prenom_profil">Prenom : </string>
    <string name="string_nom_profil">Nom : </string>
    <string name="string_dateDeNaissance_profil">Date de naissance : </string>
    <string name="string_identifiant">Identifiant</string>
    <string name="string_mot_de_passe">Mot de passe</string>
    <string name="string_mot_de_passe_oublie">Mot de passe oublié ?</string>
    <string name="string_forget_password">Mot de passe perdu</string>
    <string name="string_text_forget_password">Un email contenant un nouveau mot de passe sera envoyé à l\'adresse mail que vous allez entré. Celui-ci pourra être modifié depuis la section <b>Mon Profil</b>.</string>
    <string name="string_envoyer">Envoyer</string>
    <string name="string_change_password">Changer mon mot de passe</string>
    <string name="string_enregistrer">Enregistrer</string>
    <string name="string_creer_un_compte">Créer un compte</string>
    <string name="string_ou">ou</string>
    <string name="string_drawable_menu_overflow">Menu</string>
    <string name="string_drawable_menu_add">Ajouter</string>
    <string name="string_drawable_menu_delete">Supprimer</string>
    <string name="string_drawable_menu_edit">Modifier</string>
    <string name="string_modifier">Modifier</string>
    <string name="string_mesmagasinfavoris">Mes magasins favoris</string>
    <string name="string_mes_informations">Mes informations personnelles</string>
    <string name="string_ecran_demarrage">Ecran de demarrage</string>
    <string name="string_message_accueil">Bienvenue sur l\'application <b>ScanOID</b></string>
    <string name="string_connection">Se connecter</string>
    <string name="string_image">Image</string>
    <string name="string_mon_profil">Mon profil</string>
    <string name="string_inscription">Inscription</string>
    <string name="string_connexion">Connexion</string>
    <string name="string_cartes_fidelite">Mes cartes de fidélité</string>
    <string name="string_carte">Carte</string>
    <string name="string_liste">Liste</string>
    <string name="string_scan">Scanner un code-barre</string>
    <string name="string_scan_card">Scanner une carte de fidélité</string>
    <string name="string_product_add">Ajouter un produit</string>
    <string name="string_textfield_barcode">Numéro du code-barre</string>
    <string name="string_textfield_barcode_card">Numéro de la carte de fidélité</string>
    <string name="string_button_send_value">Rechercher</string>
    <string name="string_button_save_value">Enregistrer</string>
    <string name="string_recherche">Recherche de produit</string>
    <string name="string_resultat">Résultat(s) pour la recherche : </string>
    <string name="string_search_product">Rechercher un produit &#8230;</string>
    <string name="string_drawable_back">Retour</string>
    <string name="string_drawable_list">Liste</string>
    <string name="string_drawable_sort">Tri par prix/distance</string>
    <string name="string_produit">Produit</string>
    <string name="string_mes_listes">Mes Listes de courses</string>
    <string name="string_nom_produit">Nom :</string>
    <string name="string_fabriquant">Fabriquant :</string>
    <string name="string_description">Description :</string>
    <string name="string_magasins">Cliquez si vous n\'êtes pas dans ce magasin</string>
    <string name="string_infos_produit">Informations sur le produit dans ce magasin</string>
    <string name="string_meilleur_prix">Meilleur prix</string>
    <string name="string_magasin_plus_proche">Magasin le plus proche</string>
    <string name="string_prix">Prix</string>
    <string name="string_prix_euros">Prix (€)</string>
    <string name="string_prix_produit">Prix :</string>
    <string name="string_ajouter_prix">Proposer le prix</string>
    <string name="string_promotion">Produit en promotion</string>
    <string name="string_choix_enseigne">Choix de l\'enseigne</string>
    <string name="string_search_brand">Rechercher une enseigne</string>
    <string name="string_search_shop">Rechercher un magasin</string>
    <string name="string_ajout_dans_liste">Ajouter à une liste de courses</string>
    <string name="string_photo_produit">Photo du produit</string>
    <string name="string_favorite_address">Mes adresses favorites</string>
    <string name="string_favorite_shop">Mes magasins préférés</string>
    <string name="string_prix_enregistre">Prix enregistrés</string>
    <string name="string_ajouter_magasins_favoris">Nom du magasin</string>
    <string name="string_add_favorite_address">Ajouter une adresse favorite</string>
    <string name="string_recherche_magasin">Rechercher un magasin</string>
    <string name="string_nouvelle_adresse">Nouvelle adresse</string>
    
</resources>