<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fond"
    android:orientation="vertical"
    android:weightSum="1">
    
    <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="@dimen/bar_height"
        android:background="@drawable/border"
       android:orientation="horizontal" >

         <ImageButton
             android:id="@+id/button_back"
             android:layout_height="wrap_content"
             android:layout_width="wrap_content"
             style="@style/buttonStyle"
             android:layout_gravity="center_vertical"
             android:src="@drawable/ic_action_previous_item"
             android:contentDescription="@string/string_drawable_back" />

         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:layout_marginLeft="10dp"
             android:text="@string/string_nouvelle_adresse"
             android:textColor="@color/white"
             android:textSize="@dimen/bar_editText_text_size" />
            
     </LinearLayout>
     
     <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="213dp"
         android:layout_marginTop="40dp"
       android:gravity="center"
       android:orientation="vertical"
         android:layout_weight="0.20">
         
         <EditText
            android:id="@+id/EditTextAdresse"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="90dp"
            style="@style/editTextStyle"
            android:inputType="text"
            android:hint="@string/string_adresse"
            android:textColorHint="@color/white" />

        <EditText
            android:id="@+id/EditTextVille"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            style="@style/editTextStyle"
            android:inputType="text"
            android:hint="@string/string_adresse_ville"
            android:textColorHint="@color/white" />

        <EditText
            android:id="@+id/EditTextCP"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            style="@style/editTextStyle"
            android:inputType="phone"
            android:hint="@string/string_adresse_cp"
            android:textColorHint="@color/white" />
        
    </LinearLayout>
    
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp" 
        android:visibility="invisible" />
    
    <TextView
        android:id="@+id/error_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.0"
        android:padding="10dp"
        android:background="@color/custom_red"
        android:textColor="@color/white"
        android:visibility="gone" />

    <Button
        android:id="@+id/button_add"
        style="@style/buttonStyle"
        android:layout_width="230dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/extranormal_padding"
        android:layout_marginBottom="60dp"
        android:layout_weight="0.0"
        android:background="@drawable/mybutton"
        android:text="@string/string_add_favorite_address" />
    
</LinearLayout>
