<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fond"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/bar_height"
        android:background="@drawable/border"
        android:orientation="horizontal" >
            
       <LinearLayout
          android:layout_height="@dimen/bar_height"
          android:layout_width="match_parent"
          android:layout_weight="1.0" >

          <ImageButton
             android:id="@+id/button_back"
             android:layout_height="wrap_content"
             android:layout_width="wrap_content"
             style="@style/buttonStyle"
             android:layout_gravity="center_vertical"
             android:src="@drawable/ic_action_previous_item"
              android:contentDescription="@string/string_drawable_back" />

          <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:layout_marginLeft="10dp"
             android:text="@string/string_produit"
             android:textColor="@color/text"
             android:textSize="@dimen/bar_editText_text_size" />
             
       </LinearLayout>
          
       <ImageButton
          android:id="@+id/button_list"
          android:layout_height="wrap_content"
          android:layout_width="wrap_content"
          android:layout_weight="0.0"
          android:layout_gravity="center_vertical"
          android:layout_marginRight="5dp"
          style="@style/buttonStyle"
          android:src="@drawable/ic_action_list"
          android:contentDescription="@string/string_drawable_list" />
          
       <ImageButton
          android:id="@+id/button_map"
          android:layout_height="wrap_content"
          android:layout_width="wrap_content"
          android:layout_weight="0.0"
          android:layout_gravity="center_vertical"
          android:layout_marginRight="5dp"
          style="@style/buttonStyle"
          android:src="@drawable/ic_action_map"
          android:contentDescription="@string/string_carte" />
            
     </LinearLayout>

     <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_weight="1.0"
          android:gravity="center"
          android:orientation="horizontal" >
       
         <RelativeLayout 
             android:layout_height="wrap_content"
             android:layout_width="wrap_content"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="20dp" >
          
           <ProgressBar
              android:id="@+id/progressBar"
              android:layout_height="wrap_content"
              android:layout_width="wrap_content"
              android:layout_marginLeft="25dp"
              android:layout_marginTop="20dp" />

           <ImageView
              android:id="@+id/photo_produit_imageview"
              android:layout_width="100dp"
              android:layout_height="100dp"
              android:contentDescription="@string/string_photo_produit" />
         
         </RelativeLayout>

         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical" >
                
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/string_nom_produit"
                 android:textStyle="bold"
                 android:textColor="@color/text" />

             <TextView
                 android:id="@+id/nom_produit_textview"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="@color/text" />
                
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/string_fabriquant"
                 android:textStyle="bold"
                 android:layout_marginTop="@dimen/small_padding"
                 android:textColor="@color/text" />

             <TextView
                 android:id="@+id/nom_fabriquant_textview"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="@color/text" />
                
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/string_description"
                 android:textStyle="bold"
                 android:layout_marginTop="@dimen/small_padding"
                 android:textColor="@color/text" />

             <TextView
                 android:id="@+id/description_produit_textview"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="@color/text" />
                
           </LinearLayout>
              
     </LinearLayout>
        
     <Button
        android:id="@+id/button_ajout_dans_liste"
        style="@style/buttonStyle"
         android:layout_width="250dp"
         android:layout_height="40dp"
         android:layout_gravity="center"
         android:layout_marginTop="25sp"
         android:layout_marginBottom="10sp"
         android:background="@drawable/mybutton"
        android:text="@string/string_ajout_dans_liste" />
        
     <TextView
         android:id="@+id/error_textview"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="0.0"
         android:padding="10dp"
         android:background="@color/custom_red"
         android:textColor="@color/text"
         android:visibility="gone" />
        
</LinearLayout>