<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
   android:background="@color/fond" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/bar_height"
            android:background="@drawable/border"
            android:orientation="horizontal" >
            
            <LinearLayout
               android:layout_height="@dimen/bar_height"
               android:layout_width="match_parent"
               android:layout_weight="1.0" >

               <ImageButton
                  android:id="@+id/button_menu"
                  style="@style/buttonStyle"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:contentDescription="@string/string_drawable_menu_overflow"
                  android:src="@drawable/ic_action_overflow" />

               <View
                  android:layout_width="1dp"
                  android:layout_height="match_parent"
                  android:layout_gravity="center_vertical"
                  android:background="@color/white" />

               <TextView
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_gravity="center_vertical"
                  android:layout_marginLeft="10dp"
                  android:text="@string/string_produit"
                  android:textColor="@color/text"
                  android:textSize="@dimen/bar_editText_text_size" />
               
            </LinearLayout>
            
        <ImageButton
           android:id="@+id/button_list"
           android:layout_height="wrap_content"
           android:layout_width="wrap_content"
           android:layout_weight="0.0"
           android:layout_gravity="center_vertical"
           android:layout_marginRight="5dp"
           style="@style/buttonStyle"
           android:src="@drawable/ic_action_list"
           android:contentDescription="@string/string_drawable_list" />
            
        <ImageButton
           android:id="@+id/button_map"
           android:layout_height="wrap_content"
           android:layout_width="wrap_content"
           android:layout_weight="0.0"
           android:layout_gravity="center_vertical"
           android:layout_marginRight="5dp"
           style="@style/buttonStyle"
           android:src="@drawable/ic_action_map"
           android:contentDescription="@string/string_carte" />
            
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/normal_padding"
            android:orientation="horizontal" >
        
         <RelativeLayout 
             android:layout_height="wrap_content"
             android:layout_width="wrap_content"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="20dp" >
          
            <ProgressBar
               android:id="@+id/progressBar1"
               android:layout_height="wrap_content"
               android:layout_width="wrap_content"
               android:layout_marginLeft="25dp"
               android:layout_marginTop="20dp" />

           <ImageView
               android:id="@+id/photo_produit_imageview"
               android:layout_width="100dp"
               android:layout_height="100dp"
               android:layout_marginLeft="10dp"
               android:layout_marginRight="20dp"
               android:layout_marginTop="5dp"
               android:contentDescription="@string/string_photo_produit"
               android:background="@drawable/border_image" />
           
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
                
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/string_nom_produit"
                    android:textStyle="bold"
                    android:textColor="@color/text" />

                <TextView
                    android:id="@+id/nom_produit_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/text" />
                
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/string_fabriquant"
                    android:textStyle="bold"
                    android:layout_marginTop="@dimen/small_padding"
                    android:textColor="@color/text" />

                <TextView
                    android:id="@+id/nom_fabriquant_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/text" />
                
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/string_description"
                    android:textStyle="bold"
                    android:layout_marginTop="@dimen/small_padding"
                    android:textColor="@color/text" />

                <TextView
                    android:id="@+id/description_produit_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/text" />
                
              </LinearLayout>
              
        </LinearLayout>
        
        <Button
           android:id="@+id/button_ajout_dans_liste"
           style="@style/buttonStyle"
            android:layout_width="200dp"
            android:layout_height="65dp"
            android:layout_gravity="center"
            android:layout_marginTop="25sp"
            android:background="@drawable/mybutton"
           android:text="@string/string_ajout_dans_liste" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/small_padding"
            android:orientation="vertical" >
            
            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="?android:attr/listDivider" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="@dimen/small_padding"
                android:layout_marginBottom="@dimen/small_padding"
                android:text="@string/string_magasins"
                android:textColor="@color/text" />
            
            <RelativeLayout 
             android:layout_height="wrap_content"
             android:layout_width="wrap_content"
             android:layout_gravity="center" >
          
               <ProgressBar
                  android:id="@+id/progressBar2"
                  android:layout_height="wrap_content"
                  android:layout_width="wrap_content" />
            
               <Button
                  android:id="@+id/button_magasin_propose"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:paddingLeft="10dp"
                  android:paddingRight="10dp"
                  android:paddingTop="10dp"
                  android:background="@drawable/editable_button_red"
                  android:textSize="15sp"
                  android:textColor="@color/white"
                  android:visibility="gone" />
            
            </RelativeLayout>
            
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="@dimen/small_padding"
                android:text="@string/string_infos_produit"
                android:textColor="@color/text" />
            
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="@dimen/normal_padding"
                android:layout_marginTop="@dimen/normal_padding" >
                
               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/string_prix_produit"
                   android:textColor="@color/text" />

               <EditText
                   android:id="@+id/edittext_prix_propose"
                   style="@style/editTextStyle"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:inputType="numberDecimal"
                   android:layout_marginLeft="@dimen/small_padding"
                   android:hint="@string/string_prix" />
               
            </LinearLayout>
            
            <CheckBox
               android:id="@+id/checkbox_promotion"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginLeft="16dp"
               android:textColor="@color/text"
               android:textSize="14sp"
               android:text="@string/string_promotion" />
                
            <Button
               android:id="@+id/button_ajouter_prix"
               style="@style/buttonStyle"
                android:layout_width="200dp"
                android:layout_height="65dp"
                android:layout_gravity="center"
                android:layout_marginTop="25sp"
                android:background="@drawable/mybutton"
               android:text="@string/string_ajouter_prix" />
            
        </LinearLayout>
        
        <TextView
           android:id="@+id/error_textview"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_weight="0.0"
           android:padding="10dp"
           android:background="@color/text"
           android:textColor="@color/white"
           android:visibility="gone" />
        
   </LinearLayout>

</ScrollView>